[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-bridge"
version = "0.1.0"
description = "Standalone sidecar that bridges Nova WebSocket API Gateway to an OpenClaw bot"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
test = ["boto3>=1.34"]

[tool.setuptools]
py-modules = ["nova_bridge"]

[project.scripts]
nova-bridge = "nova_bridge:main"
